// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilerSearchContext should find elements in the chart nodes: 1: initial state 1`] = `
Object {
  "chartData": null,
  "searchIndex": null,
  "searchResults": Array [],
  "searchText": "",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should find elements in the chart nodes: 2: search for "ba" - multiple match 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
  ],
  "searchIndex": 0,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should find elements in the chart nodes: 3: search for "f" - single match 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
  ],
  "searchIndex": 0,
  "searchResults": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
  ],
  "searchText": "f",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should find elements in the chart nodes: 4: search for "y" - no match 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
  ],
  "searchIndex": null,
  "searchResults": Array [],
  "searchText": "y",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should find elements in the chart rows: 1: initial state 1`] = `
Object {
  "chartData": null,
  "searchIndex": null,
  "searchResults": Array [],
  "searchText": "",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should find elements in the chart rows: 2: search for "ba" - multiple match 1`] = `
Object {
  "chartData": Array [
    Array [
      Object {
        "id": 1,
        "name": "Foo",
      },
    ],
    Array [
      Object {
        "id": 2,
        "name": "Bar",
      },
      Object {
        "id": 3,
        "name": "Baz",
      },
    ],
  ],
  "searchIndex": 0,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should find elements in the chart rows: 3: search for "f" - single match 1`] = `
Object {
  "chartData": Array [
    Array [
      Object {
        "id": 1,
        "name": "Foo",
      },
    ],
    Array [
      Object {
        "id": 2,
        "name": "Bar",
      },
      Object {
        "id": 3,
        "name": "Baz",
      },
    ],
  ],
  "searchIndex": 0,
  "searchResults": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
  ],
  "searchText": "f",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should find elements in the chart rows: 4: search for "y" - no match 1`] = `
Object {
  "chartData": Array [
    Array [
      Object {
        "id": 1,
        "name": "Foo",
      },
    ],
    Array [
      Object {
        "id": 2,
        "name": "Bar",
      },
      Object {
        "id": 3,
        "name": "Baz",
      },
    ],
  ],
  "searchIndex": null,
  "searchResults": Array [],
  "searchText": "y",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should select the next and previous items within the search results: 1: initial state 1`] = `
Object {
  "chartData": null,
  "searchIndex": null,
  "searchResults": Array [],
  "searchText": "",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should select the next and previous items within the search results: 2: search for "ba" 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchIndex": 0,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should select the next and previous items within the search results: 3: go to second result 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchIndex": 1,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should select the next and previous items within the search results: 4: go to third result 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchIndex": 2,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should select the next and previous items within the search results: 5: go to second result 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchIndex": 1,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should select the next and previous items within the search results: 6: go to first result 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchIndex": 0,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should select the next and previous items within the search results: 7: wrap to last result 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchIndex": 3,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;

exports[`ProfilerSearchContext should select the next and previous items within the search results: 8: wrap to first result 1`] = `
Object {
  "chartData": Array [
    Object {
      "id": 1,
      "name": "Foo",
    },
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchIndex": 0,
  "searchResults": Array [
    Object {
      "id": 2,
      "name": "Bar",
    },
    Object {
      "id": 3,
      "name": "Baz",
    },
    Object {
      "id": 4,
      "name": "Bar",
    },
    Object {
      "id": 5,
      "name": "Baz",
    },
  ],
  "searchText": "ba",
  "selectNode": [Function],
}
`;
